<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameUser"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp" android:fontFamily="@font/montserrat" android:textStyle="bold"
            android:textSize="19sp" android:textColor="@color/appBlue"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:fontFamily="@font/montserrat"
            android:textSize="19sp" android:textStyle="bold" android:layout_marginStart="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="63dp"
            app:layout_constraintTop_toTopOf="parent" android:text="@string/bonjour"
            android:textColor="@color/appGrey"/>
    <TextView
            android:text="@string/objectif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textSize="10sp" android:fontFamily="@font/montserrat"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@color/appGrey"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/objectifText" app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:textStyle="bold"
            android:textColor="@color/appBlue"/>
    <TextView
            android:text="@string/Depuis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textSize="10sp"
            android:fontFamily="@font/montserrat"
            app:layout_constraintStart_toStartOf="@+id/textView3" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/objectifText" android:textColor="@color/appGrey"/>
    <TextView
            android:text="@string/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:fontFamily="@font/montserrat"
            android:textStyle="bold" android:textColor="@color/appOrange"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <View
            android:id="@+id/rectangle_5"
            android:layout_width="76dp"
            android:layout_height="103dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/cardage"
            android:elevation="7dp"
            android:layout_marginStart="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/nameUser"/>
    <TextView
            android:text="@string/age"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ageText" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="@+id/rectangle_5"
            app:layout_constraintStart_toStartOf="@+id/rectangle_5"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_5" android:textSize="12sp"
            android:fontFamily="@font/montserrat" android:textStyle="bold" android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/age"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ageTextView" app:layout_constraintStart_toStartOf="@+id/rectangle_5"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_5" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_5" android:textSize="11sp"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"/>

    <View
            android:id="@+id/rectangle_6"
            android:layout_width="76dp"
            android:layout_height="103dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/cardage"
            android:elevation="7dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/nameUser"
            app:layout_constraintStart_toEndOf="@+id/rectangle_5" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/rectangle_7"/>
    <TextView
            android:text="@string/poids"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightText" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="@+id/rectangle_6"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat" android:textStyle="bold" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/rectangle_6"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_6"/>
    <TextView
            android:text="@string/poids"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weightTextView"
            android:textSize="11sp"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/rectangle_6"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_6" android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_6"/>
    <View
            android:id="@+id/rectangle_7"
            android:layout_width="76dp"
            android:layout_height="103dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/cardage"
            android:elevation="7dp"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/nameUser"
            android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizeText" android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="@+id/rectangle_7"
            android:textSize="12sp"
            android:fontFamily="@font/montserrat" android:textStyle="bold" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/rectangle_7"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_7" android:text="@string/taille"/>
    <TextView
            android:text="@string/taille"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sizeTextView"
            android:textSize="11sp"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/rectangle_7"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_7" android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_7"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textSize="15sp"
            android:layout_marginTop="70dp" app:layout_constraintTop_toBottomOf="@+id/weightTextView"
            android:text="@string/liste" android:textColor="@color/appGrey"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/appBlue" android:textStyle="bold" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:textSize="18sp"
            android:text="@string/pourcentage"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:text="@string/nbr_aliments" android:textColor="@color/appGrey"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textStyle="bold" android:textColor="@color/appBlue"
            android:textSize="18sp" android:text="@string/aliments_nbr"/>

    <View
            android:id="@+id/rectangle_2"
            android:layout_width="308dp"
            android:layout_height="72dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView13" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:text="@string/favoris" android:textColor="@color/appGrey"/>

    <View
            android:id="@+id/toprect"
            android:layout_width="429dp"
            android:elevation="-1dp"
            android:layout_height="160dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/bl_rounded_corner_profil"
            tools:layout_editor_absoluteY="2dp" tools:layout_editor_absoluteX="0dp"/>
    <ImageView
            android:src="@drawable/martin"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:id="@+id/imageView" android:layout_marginTop="10dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"/>
</android.support.constraint.ConstraintLayout>