<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@drawable/linear_gradient">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:id="@+id/profil"
            android:orientation="vertical"
            android:background="@drawable/bl_rounded_corner"
            android:paddingLeft="40dp"
            android:paddingTop="40dp">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_profil"
                android:theme="@style/BigTitle"
                android:textColor="#000000"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameUser"
                android:theme="@style/BigTitle"
                android:textColor="@color/appBlue"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/PageWrapper"
                android:orientation="vertical"
                android:paddingTop="30dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/MediumTitle"
                    android:text="@string/categories"
                    android:layout_marginBottom="20dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:layout_marginBottom="20dp">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:paddingRight="25dp"
                        android:paddingLeft="0dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="159dp"
                            android:src="@drawable/feculents"
                            android:layout_marginBottom="10dp"
                            android:adjustViewBounds="true"
                            android:padding="0dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/categoryTitle"
                            android:text="@string/category1"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="center_horizontal"/>

                    <View
                            android:layout_width="29dp"
                            android:layout_height="3dp"
                            android:background="@drawable/category_underline"
                            android:layout_gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:paddingRight="0dp"
                        android:paddingLeft="25dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="159dp"
                            android:src="@drawable/viandes"
                            android:layout_marginBottom="10dp"
                            android:adjustViewBounds="true"
                            android:padding="0dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/categoryTitle"
                            android:text="@string/category2"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="center_horizontal"/>

                    <View
                            android:layout_width="29dp"
                            android:layout_height="3dp"
                            android:background="@drawable/category_underline"
                            android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:layout_marginBottom="20dp">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:paddingRight="25dp"
                        android:paddingLeft="0dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="159dp"
                            android:src="@drawable/legumes"
                            android:layout_marginBottom="0dp"
                            android:adjustViewBounds="true"
                            android:padding="0dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/categoryTitle"
                            android:text="@string/category3"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="center_horizontal"/>

                    <View
                            android:layout_width="29dp"
                            android:layout_height="3dp"
                            android:background="@drawable/category_underline"
                            android:layout_gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:paddingRight="0dp"
                        android:paddingLeft="25dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="159dp"
                            android:src="@drawable/pain"
                            android:layout_marginBottom="10dp"
                            android:adjustViewBounds="true"
                            android:padding="0dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/categoryTitle"
                            android:text="@string/category4"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="center_horizontal"/>

                    <View
                            android:layout_width="29dp"
                            android:layout_height="3dp"
                            android:background="@drawable/category_underline"
                            android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="0dp"
                    android:layout_marginBottom="20dp">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:paddingRight="25dp"
                        android:paddingLeft="0dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="159dp"
                            android:src="@drawable/boissons"
                            android:layout_marginBottom="10dp"
                            android:adjustViewBounds="true"
                            android:padding="0dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/categoryTitle"
                            android:text="@string/category5"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="center_horizontal"/>

                    <View
                            android:layout_width="29dp"
                            android:layout_height="3dp"
                            android:background="@drawable/category_underline"
                            android:layout_gravity="center_horizontal"/>

                </LinearLayout>

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:paddingRight="0dp"
                        android:paddingLeft="25dp">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="159dp"
                            android:src="@drawable/gateaux"
                            android:layout_marginBottom="10dp"
                            android:adjustViewBounds="true"
                            android:padding="0dp"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:theme="@style/categoryTitle"
                            android:text="@string/category6"
                            android:layout_marginBottom="5dp"
                            android:layout_gravity="center_horizontal"/>

                    <View
                            android:layout_width="29dp"
                            android:layout_height="3dp"
                            android:background="@drawable/category_underline"
                            android:layout_gravity="center_horizontal"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>